--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,20 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "发表论文"
-    url: "/#-发表论文"
-    
-  - title: "获奖情况"
-    url: "/#-获奖情况"
+  - title: "News"
+    url: "/#-news"
 
-  - title: "学习/工作经历"
-    url: "/#-学习/工作经历"
+  - title: "Publications"
+    url: "/#-publications"
 
- - title: "参与项目"
-    url: "/#-参与项目"
+  - title: "Honors and Awards"
+    url: "/#-honors-and-awards"
+
+  - title: "Educations"
+    url: "/#-educations"
 
   - title: "Invited Talks"
     url: "/#-invited-talks"
+
+  - title: "Internships"
+    url: "/#-internships"
