--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
+  - title: "News"
+    url: "/#-news"
+
   - title: "Publications"
     url: "/#-publications"
 
@@ -12,8 +15,11 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
+  - title: "Invited Talks"
+    url: "/#-invited-talks"
+
+  - title: "Internships"
+    url: "/#-internships"
+
   - title: "Projects"
     url: "/#-projects"
-
-    - title: "Invited Talks"
-    url: "/#-invited-talks"
