--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 
 # Site Settings
-title                    : "zjin"
+title                    : "Jin Zhao"
 description              : #"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
 repository               : #"RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
