--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "赵进"
+  name             : "Jin Zhao（赵进）"
   avatar           : "images/zjin.jpg"
   bio              : "之江实验室/华中科技大学"
   location         : "杭州, 中国"
