--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Jin Zhao（赵进）"
   avatar           : "images/zjin.jpg"
-  bio              : "HUST"
+  bio              : "Huazhong University of Science and Technology"
   location         : "Wuhan, China"
   employer         : #
   pubmed           : #
